// Vitest Snapshot v1

exports[`should create root filter 1`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringEqual {
    "name": "name",
    "value": "hello",
  },
}
`;

exports[`should create root filter 2`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringContain {
    "name": "name",
    "value": "hello",
  },
}
`;

exports[`should create root filter 3`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringStartsWith {
    "name": "name",
    "value": "starts with",
  },
}
`;

exports[`should create root filter 4`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringEndsWith {
    "name": "name",
    "value": "ends with",
  },
}
`;

exports[`should create root filter 5`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): Not {
    "spec": NumberEqual {
      "name": "name",
      "value": 1,
    },
  },
}
`;

exports[`should create root filter 6`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): Not {
    "spec": NumberEqual {
      "name": "name.nested",
      "value": 1,
    },
  },
}
`;

exports[`should create root filter 7`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringEqual {
    "name": "name",
    "value": "hello",
  },
}
`;

exports[`should create root filter 8`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringEqual {
    "name": "name",
    "value": "hello",
  },
}
`;
